--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "marufdev.me",
   "version": "1.0.0",
+  "homepage": "https://marufdev.me",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
@@ -41,6 +44,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
